examples/test/testpolicy1630.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1630
  namespace: namespace406
spec:
  podSelector:
    matchLabels:
      key32: value23
      key41: value29
      key11: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value4
          key36: value31
      podSelector:
        matchLabels:
          key44: value22
          key32: value15
          key19: value44
